# reconeye

./: .continueignore  .env.docker.example  .env.example  .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  Makefile  README.md  RELEASE.md  SCRAPING_GUIDELINES.md  WINDY_STREAM_URL_FIX.md  docker-compose.yml  pyproject.toml
.continue/: rules
.continue/agents/: reconeye.yaml
.github/: copilot-instructions.md
apps/cameras/: admin.py  apps.py  forms.py  htmx_urls.py  imports.py  models.py  services.py  services_grid.py  signals.py  tasks.py  urls.py  views.py
apps/cameras/migrations/: 0001_initial.py  0002_alter_camera_source_type.py  (+15 more)
apps/common/: admin.py  apps.py  audit.py  authz.py  cache.py  capabilities.py  celery_activity.py  checks.py  context_processors.py  htmx_urls.py  middleware.py  models.py  urls.py  views.py
apps/dashboard/: htmx_urls.py  services.py  urls.py  views.py
apps/scraping/: admin.py  apps.py  config.py  geoip.py  geolocation.py  htmx_urls.py  http.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
requirements/: base.txt  dev.txt
static/admin/: reconeye_admin.css
static/css/: reconeye-table-density.css
templates/: base.html
templates/admin/: base_site.html
templates/cameras/: _go2rtc_iframe_player.html  _go2rtc_import_tab.html  _go2rtc_instance_menu_footer.html  _go2rtc_instance_menu_list.html  _go2rtc_setup_tab.html  _stream_player.html  _unified_player.html  detail.html  go2rtc_manager.html  go2rtc_profile_grid.html  go2rtc_viewer.html  list.html  map.html  surveillance.html
templates/common/: admin_hub.html
templates/dashboard/: index.html
templates/scraping/: _pagination.html  job_list.html
templates/users/: login.html  settings.html
(+46 files in other folders)
