[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[project]
name = "reconeye"
version = "0.1.0"
description = "ReconEye — production-ready camera scraping dashboard"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "httpx[http2]>=0.27",
    "aiolimiter>=1.1",
    "tenacity>=8.3",
    "gunicorn>=22.0",
    "whitenoise[brotli]>=6.7",
    "django-htmx>=1.17",
    "django-environ>=0.11",
    "pillow>=10.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "django-stubs[compatible-mypy]>=5.0",
    "types-beautifulsoup4>=4.12",
    "factory-boy>=3.3",
    "pre-commit>=3.7",
    "ipython>=8.24",
    "django-debug-toolbar>=4.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"*/migrations/*.py" = ["E501", "F401"]
"config/settings/*.py" = ["F405", "F403"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = "test_*.py tests.py"
addopts = "--reuse-db -v"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]
